--- a/main.html
+++ b/main.html
@@ -34,19 +34,10 @@
     <!-- Vendor CSS Files -->
     <link href="vendor/animate.css/animate.min.css" rel="stylesheet" />
     <link href="vendor/aos/aos.css" rel="stylesheet" />
-    <link
-      href="vendor/bootstrap/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="vendor/bootstrap-icons/bootstrap-icons.css"
-      rel="stylesheet"
-    />
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet" />
     <link href="vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
-    <link
-      href="vendor/glightbox/css/glightbox.min.css"
-      rel="stylesheet"
-    />
+    <link href="vendor/glightbox/css/glightbox.min.css" rel="stylesheet" />
     <link href="vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/main.css" rel="stylesheet" />
@@ -76,8 +67,8 @@
               >
             </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#projects">Θέματα</a>
-              </li>
+              <a class="nav-link js-scroll-trigger" href="#projects">Θέματα</a>
+            </li>
             <!-- <li class="dropdown">
               <a class="dropbtn">Θέματα</a>
               <div class="dropdown-content">
@@ -92,9 +83,15 @@
               >
             </li>
             <li class="nav-item">
-              <button id="username" class="btn btn-primary rounded p-3 m-3">
-                Username
-              </button>
+              <form action="userProfile.html">
+                <button
+                  type="submit"
+                  id="username"
+                  class="btn btn-primary rounded p-3 m-3"
+                >
+                  Username
+                </button>
+              </form>
             </li>
           </ul>
         </div>
@@ -162,38 +159,40 @@
 
             <!-- Slide 3 -->
             <div class="carousel-item">
-                <div class="carousel-container">
-                  <h2 class="animate__animated animate__fadeInDown">
-                    Συνέπειες της Εμπορίας Ανθρώπων
-                  </h2>
-                  <p class="animate__animated animate__fadeInUp">
-                    To trafficking, επιφέρει μεγάλες αλλοιώσεις στα οικονομικά
-                    θεμέλια μιας χώρας.
-                  </p>
-                  <a
-                    href="#consequences"
-                    class="btn-get-started animate__animated animate__fadeInUp"
-                    >Διάβασε Περισσότερα</a
-                  >
-                </div>
+              <div class="carousel-container">
+                <h2 class="animate__animated animate__fadeInDown">
+                  Συνέπειες της Εμπορίας Ανθρώπων
+                </h2>
+                <p class="animate__animated animate__fadeInUp">
+                  To trafficking, επιφέρει μεγάλες αλλοιώσεις στα οικονομικά
+                  θεμέλια μιας χώρας.
+                </p>
+                <a
+                  href="#consequences"
+                  class="btn-get-started animate__animated animate__fadeInUp"
+                  >Διάβασε Περισσότερα</a
+                >
               </div>
-
-           <!-- Slide 4 -->
-           <div class="carousel-item">
-            <div class="carousel-container">
-              <h2 class="animate__animated animate__fadeInDown">
-                  Η Λύση που Προτείνουμε
-              </h2>
-              <p class="animate__animated animate__fadeInUp">
-                Δημοσιότητα<br />Αστυνομική Παρέμβαση<br />Καλύτερη Λειτουργία της Δικαιοσύνης<br />Βελτίωση Οικονομικής Κατάστασης Φτωχότερων Χωρών<br />Εκπαίδευση
-              </p>
-              <a
-                href="#measures"
-                class="btn-get-started animate__animated animate__fadeInUp"
-                >Διάβασε Περισσότερα</a
-              >
             </div>
-          </div>
+
+            <!-- Slide 4 -->
+            <div class="carousel-item">
+              <div class="carousel-container">
+                <h2 class="animate__animated animate__fadeInDown">
+                  Η Λύση που Προτείνουμε
+                </h2>
+                <p class="animate__animated animate__fadeInUp">
+                  Δημοσιότητα<br />Αστυνομική Παρέμβαση<br />Καλύτερη Λειτουργία
+                  της Δικαιοσύνης<br />Βελτίωση Οικονομικής Κατάστασης
+                  Φτωχότερων Χωρών<br />Εκπαίδευση
+                </p>
+                <a
+                  href="#measures"
+                  class="btn-get-started animate__animated animate__fadeInUp"
+                  >Διάβασε Περισσότερα</a
+                >
+              </div>
+            </div>
 
             <a
               class="carousel-control-prev"
@@ -222,7 +221,6 @@
         </section>
         <!-- End Hero -->
       </div>
-
     </header>
     <!-- About-->
     <section class="about-section text-center" id="about">
@@ -231,8 +229,8 @@
           <div class="col-lg-8 mx-auto">
             <h2 class="text-white mb-4">Ποιοι είμαστε</h2>
             <p class="text-white-50">
-              Είμαστε η ΟΠΚΕΑ (Οργάνωση Πληροφόρησης και Καταπολέμησης Εμπορίας Ανθρώπων)
-              ένας μη κερδοσκοπικός οργανισμός που τρέφεται από την
+              Είμαστε η ΟΠΚΕΑ (Οργάνωση Πληροφόρησης και Καταπολέμησης Εμπορίας
+              Ανθρώπων) ένας μη κερδοσκοπικός οργανισμός που τρέφεται από την
               ελπίδα ότι όλοι οι άνθρωποι, παντού, μπορούν να διασωθούν απο την
               σκλαβιά και να επανέλθουν ολοκληρωτικά σε μια καλύτερη ζωη.
               Είμαστε αυτοί που δουλεύουν και συνεργάζονται με ανθρώπους όπως
@@ -394,9 +392,8 @@
           </div>
         </div>
 
-
-            <!-- Topic Three Row-->
-            <div
+        <!-- Topic Three Row-->
+        <div
           class="row justify-content-center no-gutters mb-5 mb-lg-0"
           id="measures"
         >
@@ -415,30 +412,38 @@
                 >
                   <h4 class="text-white">Η Λύση που Προτείνουμε</h4>
                   <ul class="text-white-50">
-                    <li>Πρέπει, πρώτα απ’ όλα, μέσα από μια πλατιά δημοσιότητα, να καταστεί
-                        πρόβλημα όλης της δημοκρατικής κοινωνίας και των φορέων που αγωνίζονται
-                        για τα ανθρώπινα δικαιώματα ή προσφέρουν αρωγή στα θύματα των
-                        παραβιάσεων. Ήδη, εκτός από τις φεμινιστικές οργανώσεις, στην Ελλάδα
-                        ασχολούνται με την καταναγκαστική πορνεία και άλλοι φορείς δικαιωμάτων.
-                        Πρέπει έτσι, να δημιουργηθεί κοινό μέτωπο όλων που σε συνεργασία με τις
-                        οργανώσεις των μεταναστών και μια συντονιστική επιτροπή θα παρακολουθεί σε
-                        μόνιμη βάση την τύχη των πρωτοβουλιών που αναλαμβάνει και την εφαρμογή
-                        των νόμων.
-                        </li>
-                    <li>Επιβάλλεται αστυνομική παρέμβαση για να κτυπηθούν τα κυκλώματα και να
-                        συλληφθούν οι σωματέμποροι.
-                        Γ)Επιβάλλεται καλύτερη λειτουργία της δικαιοσύνης, αφού εύκολα οι
-                        σωματέμποροι απαλλάσσονται, ενώ οι πελάτες δεν διώκονται, παρά μόνο κατ’
-                        εξαίρεση (ανήλικα κορίτσια), αν και τις περισσότερες φορές.έχουν συνεργήσει, εν
-                        γνώση τους, σε κακουργηματικές πράξεις.
-                        </li>
-                    <li>Απαιτείται σύνταξη και εκτέλεση προγραμμάτων που στοχεύουν στη βελτίωση
-                        της οικονομικής κατάστασης των φτωχότερων χωρών.
-                        </li>
-                    <li>Απαιτείται εντατικότερη εκπαίδευση έτσι ώστε να μάθουν όλοι πόσο
-                        σημαντικός είναι ο σεβασμός αρχών της ανθρώπινης αξιοπρέπειας και των
-                        ανθρώπινων δικαιωμάτων.
-                        </li>
+                    <li>
+                      Πρέπει, πρώτα απ’ όλα, μέσα από μια πλατιά δημοσιότητα, να
+                      καταστεί πρόβλημα όλης της δημοκρατικής κοινωνίας και των
+                      φορέων που αγωνίζονται για τα ανθρώπινα δικαιώματα ή
+                      προσφέρουν αρωγή στα θύματα των παραβιάσεων. Ήδη, εκτός
+                      από τις φεμινιστικές οργανώσεις, στην Ελλάδα ασχολούνται
+                      με την καταναγκαστική πορνεία και άλλοι φορείς
+                      δικαιωμάτων. Πρέπει έτσι, να δημιουργηθεί κοινό μέτωπο
+                      όλων που σε συνεργασία με τις οργανώσεις των μεταναστών
+                      και μια συντονιστική επιτροπή θα παρακολουθεί σε μόνιμη
+                      βάση την τύχη των πρωτοβουλιών που αναλαμβάνει και την
+                      εφαρμογή των νόμων.
+                    </li>
+                    <li>
+                      Επιβάλλεται αστυνομική παρέμβαση για να κτυπηθούν τα
+                      κυκλώματα και να συλληφθούν οι σωματέμποροι. Γ)Επιβάλλεται
+                      καλύτερη λειτουργία της δικαιοσύνης, αφού εύκολα οι
+                      σωματέμποροι απαλλάσσονται, ενώ οι πελάτες δεν διώκονται,
+                      παρά μόνο κατ’ εξαίρεση (ανήλικα κορίτσια), αν και τις
+                      περισσότερες φορές.έχουν συνεργήσει, εν γνώση τους, σε
+                      κακουργηματικές πράξεις.
+                    </li>
+                    <li>
+                      Απαιτείται σύνταξη και εκτέλεση προγραμμάτων που στοχεύουν
+                      στη βελτίωση της οικονομικής κατάστασης των φτωχότερων
+                      χωρών.
+                    </li>
+                    <li>
+                      Απαιτείται εντατικότερη εκπαίδευση έτσι ώστε να μάθουν
+                      όλοι πόσο σημαντικός είναι ο σεβασμός αρχών της ανθρώπινης
+                      αξιοπρέπειας και των ανθρώπινων δικαιωμάτων.
+                    </li>
                   </ul>
                   <hr class="d-none d-lg-block mb-0 ml-0 mr-0" />
                 </div>
@@ -446,7 +451,7 @@
             </div>
           </div>
         </div>
-    </div>
+      </div>
     </section>
 
     <!-- Contact-->
